Fri May  2 18:37:01 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * install/CUTS_PICML.wxs:
        
          Added the CAPI generator to the installer.

Fri May  2 03:43:00 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/schemas/naomi:
        * etc/schemas/naomi/attribute_simple.xsd:
        * etc/schemas/naomi/interface.xsd:

          XML schema definitions for the NAOMI project.

Fri May  2 03:33:22 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/naomi/GNC_App.h:
        * MDE/GME/naomi/GNC_App.cpp:

          . Modified the connector so that it inputs/outputs all the
            attributes using a single command-line option.

        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.h:
        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.cpp:

          . Updated the CAPI generator to handle variables.
          . Bug fix where the implementation for print error messages
            was incorrect.

Thu May  1 20:06:50 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/java/PeriodicTask.java:
        * cuts/cuts.java.jbi.client.build:
        * cuts/java/jbi:
        * cuts/java/jbi/client:
        * cuts/java/jbi/client/JbiClient.java:
        * cuts/java/jbi/client/JbiEvent.java:
        * cuts/java/jbi/client/JbiSink.java:
        * cuts/java/jbi/client/JbiSource.java:

          Initial implementation for the Java-based JBI client
          testing infrastructure for CUTS.

Tue Apr 29 04:42:06 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/CUTS.mpc:
        * cuts/cuts.java.build:
        * cuts/cuts_java_Logger.h:
        * cuts/cuts_java_Logger.cpp:
        * cuts/java:
        * cuts/java/LogPriority.java:
        * cuts/java/Logger.java:

          . Implemented a simple Logger class in Java that uses the
            ACE logging framework via the Java Native Interface (JNI).

        * cuts/java/PeriodicTask.java:
